Fix scrollbar within the tracing console window.
http://code.google.com/p/fbug/source/detail?r=3277

--- a/extension/skin/classic/traceConsole.css
+++ b/extension/skin/classic/traceConsole.css
@@ -1,5 +1,6 @@
-#panelNode-traceConsole {
-    overflow: auto;
+#panelNode-traceConsole,
+#traceLogContent {
+    overflow: hidden;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -7,6 +8,10 @@
     top: 0;
     background-color: #FFFFFF;
     color: #000000;
+}
+
+#traceLogContent {
+    overflow: auto;
 }
 
 /************************************************************************************************/
@@ -72,6 +77,13 @@
 }
 
 .traceInfoLogsText {
+    height: 100%;
+}
+
+.traceInfoLogsFrame {
+    border: 0;
+    width: 100%;
+    height: 100%;
 }
 
 /************************************************************************************************/
